# mypy-union-bug

./: README.md  main.py  minified.py  pyproject.toml
